Fix: Heading alignment on section pages

--- a/app/assets/stylesheets/design/sections.scss
+++ b/app/assets/stylesheets/design/sections.scss
@@ -4,6 +4,7 @@
 }
 
 .main-title-bar h1.sections {
+  top: -7px;
   .icon-fr2 { font-size: modular-scale(6); }
 
   .icon-fr2-Coins-dollaralt { top: 5px; }
